# msr605x

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: build-packages.yml
src/: window.py
src/msr605x/: commands.py  constants.py  device.py  parser.py
src/ui/: erase_panel.py  read_panel.py  write_panel.py
